objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agree_With_Information_About_CSD__c</fullName>
        <label>Agree With Information About CSD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Age__c</fullName>
        <label>Animal Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Breed__c</fullName>
        <label>Animal Breed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Character_Description__c</fullName>
        <label>Animal Character Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Colour__c</fullName>
        <label>Animal Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Description__c</fullName>
        <label>Animal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Location__c</fullName>
        <label>Animal Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_RON__c</fullName>
        <label>Animal RON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Sex__c</fullName>
        <label>Animal Sex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Shelter_Address_1__c</fullName>
        <label>Animal Shelter Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Shelter_Address_2__c</fullName>
        <label>Animal Shelter Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Shelter_Email__c</fullName>
        <label>Animal Shelter Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Shelter_Name__c</fullName>
        <label>Animal Shelter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Shelter_Phone__c</fullName>
        <label>Animal Shelter Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Shelter_Postcode__c</fullName>
        <label>Animal Shelter Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Shelter_State__c</fullName>
        <label>Animal Shelter State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Shelter_Suburb__c</fullName>
        <label>Animal Shelter Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Size__c</fullName>
        <label>Animal Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Type__c</fullName>
        <label>Animal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Pets_Living_At_Home__c</fullName>
        <label>Any Pets Living At Home</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anything_Else_To_Know_About_CSD__c</fullName>
        <label>Anything Else To Know About CSD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anything_Else_To_Share__c</fullName>
        <label>Anything Else To Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breed_Primary__c</fullName>
        <label>Breed Primary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breed_Secondary__c</fullName>
        <label>Breed Secondary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Children_Under_18_Living_At_Home__c</fullName>
        <label>Children Under 18 Living At Home</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_ABN__c</fullName>
        <label>Company ABN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Corporate_Support_Day__c</fullName>
        <label>Date of Corporate Support Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_birth_utc__c</fullName>
        <label>Date of birth utc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desexing__c</fullName>
        <label>Desexing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_you_have_any_ideas__c</fullName>
        <label>Did you have any ideas?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_pets__c</fullName>
        <label>Do you have any pets?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_session__c</fullName>
        <label>Education session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_my_information_booklet__c</fullName>
        <label>Email my information booklet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enjoy_CSD__c</fullName>
        <label>Enjoy CSD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_MIcrochip__c</fullName>
        <label>Has MIcrochip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_Been_Brands_Ambassador__c</fullName>
        <label>Have Been Brands Ambassador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Description__c</fullName>
        <label>Home Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Program__c</fullName>
        <label>How Did You Hear About Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_were_you_thinking_of_celebrating__c</fullName>
        <label>How were you thinking of celebrating?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Im_officially_excited__c</fullName>
        <label>I&apos;m officially excited</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Source__c</fullName>
        <label>Image Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Vaccinated__c</fullName>
        <label>Is Vaccinated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_there_anything_else_we_should_know__c</fullName>
        <label>Is there anything else we should know?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Know_How_To_Get_To_Shelter__c</fullName>
        <label>Know How To Get To Shelter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <label>Lead Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adopt Form</fullName>
                </value>
                <value>
                    <fullName>Ambassador Application Form</fullName>
                </value>
                <value>
                    <fullName>Become an RSPCA NSW Fundraiser</fullName>
                </value>
                <value>
                    <fullName>Covid Safe</fullName>
                </value>
                <value>
                    <fullName>CSD Feedback Form</fullName>
                </value>
                <value>
                    <fullName>CSD Participant Form</fullName>
                </value>
                <value>
                    <fullName>Express your interest in becoming an RSPCA NSW exceptional owner</fullName>
                </value>
                <value>
                    <fullName>Have your details changed?</fullName>
                </value>
                <value>
                    <fullName>HEA for business</fullName>
                </value>
                <value>
                    <fullName>How can we help (GIW)</fullName>
                </value>
                <value>
                    <fullName>How can we help (HEA)</fullName>
                </value>
                <value>
                    <fullName>Interested in a corporate support day?</fullName>
                </value>
                <value>
                    <fullName>Interested in a Corporate Visit</fullName>
                </value>
                <value>
                    <fullName>Interested in an RSPCA community group education visit?</fullName>
                </value>
                <value>
                    <fullName>Interested in our animal first aid course?</fullName>
                </value>
                <value>
                    <fullName>Interested in our Family Fun Day?</fullName>
                </value>
                <value>
                    <fullName>Interested in our Microchipping course?</fullName>
                </value>
                <value>
                    <fullName>Interested in our School Holiday Program?</fullName>
                </value>
                <value>
                    <fullName>Interested in RSPCA education visit?</fullName>
                </value>
                <value>
                    <fullName>Interested in workplace giving?</fullName>
                </value>
                <value>
                    <fullName>Is your adoptaversary coming up?</fullName>
                </value>
                <value>
                    <fullName>Join Team RSPCA</fullName>
                </value>
                <value>
                    <fullName>Join Team RSPCA at City2Surf</fullName>
                </value>
                <value>
                    <fullName>Join Team RSPCA at the Sydney Morning Herald Half Marathon</fullName>
                </value>
                <value>
                    <fullName>Learn more about honouring a loved one</fullName>
                </value>
                <value>
                    <fullName>Learn more about leaving a gift in your will</fullName>
                </value>
                <value>
                    <fullName>Report Cruelty</fullName>
                </value>
                <value>
                    <fullName>RSPCA at Blackmore&apos;s Running Festival</fullName>
                </value>
                <value>
                    <fullName>Support RSPCA at your wedding or event</fullName>
                </value>
                <value>
                    <fullName>Tell Us your Birthday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifestyle_Description__c</fullName>
        <label>Lifestyle Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Term_Pet__c</fullName>
        <label>Long Term Pet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Project__c</fullName>
        <label>Maintenance Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microchip_No__c</fullName>
        <label>Microchip No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Passionate_Issues__c</fullName>
        <label>Most Passionate Issues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_attendants__c</fullName>
        <label>Number of attendants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_people__c</fullName>
        <label>Number of people</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opening_Hours__c</fullName>
        <label>Opening Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Relevant_Information__c</fullName>
        <label>Other Relevant Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_call_me__c</fullName>
        <label>Please call me</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_list_any_medical_conditions__c</fullName>
        <label>Please list any medical conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_tell_us_about_them__c</fullName>
        <label>Please tell us about them</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_my_information_booklet__c</fullName>
        <label>Post my information booklet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefered_Contact_Method__c</fullName>
        <label>Prefered Contact Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Date_2__c</fullName>
        <label>Preferred Date 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Date_3__c</fullName>
        <label>Preferred Date 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Date__c</fullName>
        <label>Preferred Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Time__c</fullName>
        <label>Preferred Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Pet_Experience__c</fullName>
        <label>Previous Pet Experience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Color__c</fullName>
        <label>Primary Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Assistance__c</fullName>
        <label>Requesting Assistance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Color__c</fullName>
        <label>Secondary Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelter_Be_Visiting_For_CSD__c</fullName>
        <label>Shelter Be Visiting For CSD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelter_and_veterinary_tour__c</fullName>
        <label>Shelter and veterinary tour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapchat__c</fullName>
        <label>Snapchat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Needs__c</fullName>
        <label>Special Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spending_time_with_animals__c</fullName>
        <label>Spending time with animals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Experience__c</fullName>
        <label>Staff Experience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tell_us_about_your_pets__c</fullName>
        <label>Tell us about your pets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tell_us_about_yourself__c</fullName>
        <label>Tell us about yourself</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_conditions__c</fullName>
        <label>Terms and conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Understand_Participant_Expectations__c</fullName>
        <label>Understand Participant Expectations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Understand_What_To_Wear__c</fullName>
        <label>Understand What To Wear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsertand_Animal_Handling_Guidelines__c</fullName>
        <label>Unsertand Animal Handling Guidelines</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_a_photo_of_your_pet__c</fullName>
        <label>Upload a photo of your pet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_a_photo_of_yourself__c</fullName>
        <label>Upload a photo of yourself</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_stage_best_applies_to_your_group__c</fullName>
        <label>What stage best applies to your group?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_To_Find__c</fullName>
        <label>Where To Find</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_Brands_Ambassador_For__c</fullName>
        <label>Which Brands Ambassador For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Youtube__c</fullName>
        <label>Youtube</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>